# magenta-realtime

./: .gitignore  GEMINI.md  README.md  install.sh  pyproject.toml  run_dynamic_style.py  run_magenta.py
magenta_rt/: asset_test.py  audio_test.py  musiccoca_test.py  spectrostream_test.py  system_test.py  utils.py  utils_test.py
magenta_rt/depthformer/: decode_test.py  model.py  modules_test.py
