[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magenta_rt"
version = "0.1.0"
authors = [
  { name="Google DeepMind" },
]
description = "Magenta RT: Real-time music generation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "absl-py",
  "chex",
  "clu",
  "gin-config",
  "flaxformer @ git+https://github.com/google/flaxformer@399ea3a",
  "google-cloud-storage",
  "jax",
  "jaxlib",
  "numpy",
  "pynvml",
  "resampy",
  "sentencepiece",
  "seqio",
  "soundfile",
  "t5x @ git+https://github.com/dewwwey/t5x.git",
  "tqdm",
  "typing-extensions",
  "sounddevice",
]

[project.optional-dependencies]
test = [
  "pytest",
]
gpu = [
  "jax[cuda12]",
  "t5x[gpu] @ git+https://github.com/dewwwey/t5x.git",
]
tpu = []

[project.urls]
Homepage = "https://github.com/magenta/magenta-realtime"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"magenta_rt" = [
  "depthformer/configs/*.gin",
  "colab/static/js/*.js",
  "colab/static/html/*.html",
  ]

[tool.pytest.ini_options]
pythonpath = ["."]
